--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                                     <div class="container">
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <h2>Landscaping</h2>
-                                                <p>Our company offer more than just mowing and fertilizing your lawn in most cases. Other tasks a landscaping professional performs include tree and shrub pruning, spring and fall cleanup, edging and mulching, irrigation issues, and lawn renovation. 
+                                                <h2>Painting</h2>
+                                                <p>Our company offers a high quality painting services.
                                                    
                                                 </p>
                                                 <a class="slide-btn smoth-scroll" href="#contact">contact</a>
@@ -284,8 +284,8 @@
                             <i class="fa fa-briefcase"></i>
                         </div>
                         <div class="service-content">
-                            <h4>Mowing</h4>
-                            <p>Our experienced professional will perform a quick and quality job</p>
+                            <h4>Landscaping</h4>
+                            <p>Our experienced professional will perform a quick and quality mowing job. The tree service pros in our network specialize in all types of tree trimming projects.</p>
                         </div>
                     </div>
                 </div>
@@ -297,8 +297,8 @@
                             <i class="fa fa-briefcase"></i>
                         </div>
                         <div class="service-content">
-                            <h4>Tree Trimming</h4>
-                            <p>The tree service pros in our network specialize in all types of tree trimming projects.</p>
+                            <h4>Painting</h4>
+                            <p>Choose us to deliver you a high quality painting job</p>
                         </div>
                     </div>
                 </div>
@@ -343,17 +343,7 @@
                 </div>
                 <!-- END SINGLE SERVICE BOX -->
                 <!-- START SINGLE SERVICE BOX -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="single-service-box">
-                        <div class="service-icon">
-                            <i class="fa fa-briefcase"></i>
-                        </div>
-                        <div class="service-content">
-                            <h4>Air Duct Cleaning</h4>
-                            <p>You don't have to wait for disaster to strike to have your air ducts cleaned by a professional.</p>
-                        </div>
-                    </div>
-                </div>
+             s
                 <!-- END SINGLE SERVICE BOX -->
             </div>
         </div>
@@ -417,7 +407,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-widget">
                             <h4 class="footer-logo">about <span>IMB</span></h4>
-                            <p>n></span>
+                            <p>></span>
                         <p>IMB LLC offers installation and repair services for commercial or residential .We are your personal commercial and home improvement consultant and a trusted, knowledgeable resource that is part of a leading national service.</p>
                             <div class="footer-social">
                                 <ul>
